[build-system]
requires = [
    "setuptools",
    "wheel",
    "asyncio",
    "requests"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = [
    "pyfl",
]
exclude = [
    "**/__pycache__",
    "build",
    "docs",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "warn"
pythonVersion = "3.8"
typeCheckingMode = "basic"