[metadata]
name = pyfl
version = 0.0.5
author = wotanut
author_email = wotanutt@gmail.com
description = A python library that takes information from the Transport For London API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wotanut/pyfl
project_urls =
    Bug Tracker = https://github.com/wotanut/pyfl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
